<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wallet-Dev</string>
    <string name="deposit_cash">	Deposit Cash</string>
    <string name="withdraw_cash">	Withdraw Cash</string>
    <string name="transfer_money">	Transfer Money</string>
    <string name="account_balance">	SAFE Account Balance</string>
    <string name="load_cash">	Load Cash into Wallet</string>
    <string name="unload_cash">	Unload Cash from Wallet</string>
    <string name="view_stored">	View Stored Money</string>
    <string name="list_transactions">	List Transactions</string>
    <string name="fetch_code">	Fetch Trans Code</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help him fix the issue !</string>
    <string name="agent_confirmation">	Agent Confirmation</string>
    <string name="back">Back</string>
    <string name="amount_to_deposit">Amount to Deposit:</string>
    <string name="user_registration">User Registration:</string>
    <string name="wallet_conf">Wallet Configuration:</string>
    <string name="change_wallet_pin">Change Wallet PIN:</string>
    <string name="change_SAFE_pin">Change SAFE PIN:</string>
    <string name="agent_mobile_number">"Agent's Mobile Number:"</string>
    <string name="account_for_deposit">Account for Deposit:</string>
    <string name="ok">OK</string>
    <string name="pay_mobile">Pay Mobile</string>
    <string name="safe_transactions">SAFE Transactions</string>
    <string name="safe_agent">SAFE Agent</string>
    <string name="safe_accounts">SAFE Accounts</string>
    <string name="m_banking">m-Banking</string>
    <string name="m_applications">m-Applications</string>
    <string name="m_security">m-Security</string>
    <string name="todo">TODO</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="transId">Trans ID:</string>
    <string name="no_advertisements">There are no m-Advertisements on the Market</string>
    <string name="view_delete_promotion">View / Delete Promotion</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="delete">Delete</string>
    <string name="m_coupon">m-Coupon</string>
    <string name="m_bill">m-Bill</string>
    <string name="time">Time</string>
    <string name="m_ticket">m-Ticket</string>
    <string name="system_info">"	System info"</string>
    <string name="system_information">System Information</string>
    <string name="large_text">Large Text</string>
    <string name="m_pay">m-Pay</string>
    <string name="pay_merchant">"	Pay Merchant"</string>

    <!-- m-Banking -->
    <string name="check_balance">Check Balance</string>
    <string name="bank_account_balance">"	Account Balance"</string>
    <string name="account_status">"	Account Status"</string>
    <string name="m_banking">m-Banking</string>
    <string name="register_bank_account">"	Register Bank Account"</string>
    <string name="pay_bill_invoice">"	Pay Bill/Invoice"</string>
    <string name="transfer_funds">"	Transfer Money"</string>
    <string name="account_balance">"	Account Balance"</string>
    <string name="list_delete_bank_accounts">"	List / Delete Bank Accounts"</string>
    <string name="bank_account_status">"	Bank Account Status"</string>
    <string name="list_bank_transactions">"	List Transactions"</string>
    <string name="no_recent_transactions">There are no recent transactions</string>
    <string name="list">List</string>

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="select_device">select a device to connect</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Feature 1</string>
    <string name="title_feature2">Feature 2</string>
    <string name="title_feature3">Feature 3</string>
    <string name="title_feature4">Feature 4</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>
    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>
    <string name="about_intro">This app is a demo to show you how to do an Android app based on the Dashboard pattern that has been used in apps like Twitter, Google IO, and Evernote.</string>
    <string name="search_intro">Content for the Search page goes here.</string>
    <string name="dashboard_action">Action</string>
    <string name="dashboard_button_1">m-Promotions</string>
    <string name="dashboard_button_2">m-Coupons</string>
    <string name="dashboard_button_3">m-Telecom</string>
    <string name="dashboard_button_4">m-Tickets</string>
    <string name="dashboard_button_5">m-Parking</string>
    <string name="dashboard_button_6">m-Giftcards</string>
    <string name="settings_menu_label">SETTINGS</string>
    <string name="settings_menu_label_shortcut">m</string>
    <string name="description_logo">Google I/O 2010</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_map">Map</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="description_export">Export</string>
    <string name="description_star">Star</string>
    <string name="now_playing_loading">Ads from nearby services\u2026</string>
    <string name="loading">Loading...</string>
    <string name="date">Date: 18 June 2011</string>
    <string name="serial_no">Serial No: 1JER234UHG</string>
    <string name="description">Movie: Transformers 3</string>
    <string name="amount">Price: 100 SEK</string>
    <string name="bill_no">Bill number</string>
    <string name="bill_desc">Bill description</string>
    <string name="bill_status">Bill status: PAID</string>
    <string name="pay">Pay</string>
    <string name="select_bank_account">Select Bank Account:</string>
    <string name="select_safe_account">Select SAFE Account:</string>
    <string name="header">SF Bio: Kista</string>
    <string name="address">Farogatan 9\n164 40 KISTA\nStockholm\n08-750 56 00</string>
    <string name="details">Situated in an historic Victorian building on the borders of Soho and Mayfair, 
    Bentley’s combines a relaxed oyster bar with a more formal Grill restaurant, plus two private rooms, arranged over three floors.</string>
    <string name="search_by">Search by</string>
    <string name="mobile_number">Mobile number</string>
    <string name="us_country_code">+1</string>
    <string name="server_ip_address">Server IP Address</string>

    <string-array name="menu">
        <item>Indian beef curry with coriander yoghurt and jasmine rice</item>
        <item>Crispy baked hake fillet with citronremoulad and boiled potatoes</item>
        <item>Chili carne with basmati rice and sour cream</item>
        <item>House Lasagna with tomato sauce and freshly grated Parmesan</item>
    </string-array>
    <string-array name="card_types">
        <item>Select Card Type:</item>
        <item>Credit card</item>
        <item>Debit card</item>
    </string-array>
    <string-array name="issuing_bank">
        <item>Issuing Bank:</item>
        <item>Nordea</item>
        <item>SEB</item>
        <item>Barclays</item>
    </string-array>
    <string-array name="registered_banks">
        <item>Nordea</item>
        <item>SEB</item>
        <item>Barclays</item>
    </string-array>
    <string-array name="card_brands">
        <item>Select Card Brand:</item>
        <item>VISA</item>
        <item>Master Card</item>
        <item>American Express</item>
        <item>Discovery</item>
    </string-array>
    <string-array name="registered_cards">
        <item>Select Card:</item>
        <item>VISA</item>
        <item>Master Card</item>
        <item>American Express</item>
        <item>Discovery</item>
    </string-array>
    <string-array name="bank_accounts">
        <item>Bank Accounts</item>
    </string-array>
    <string-array name="pay_options">
        <item>SAFE Account</item>
    </string-array>
    <string-array name="merchant_category">
        <item>Merchant Name</item>
        <item>Category</item>
        <item>Location</item>
        <item>All</item>
    </string-array>

    <string name="menu_list">1. Indian beef curry with coriander yoghurt and jasmine rice\n\n
	2. Crispy baked hake fillet with citronremoulad and boiled potatoes\n\n
	3. Chili carne with basmati rice and sour cream\n\n
	4. House Lasagna with tomato sauce and freshly grated Parmesan</string>
    <string name="no_coupons">There are no m-Coupons\n stored in the Wallet.\n Download from the Market</string>
    <string name="no_tickets">There are no m-Tickets\n stored in the Wallet.\n Download from the Market</string>
    <string name="no_giftcards">There are no m-Gift Cards\n stored in the Wallet.\n Download from the Market</string>
    <string name="no_bills">There are no m-Bills</string>
    <string name="no_paid_bills">There are no paid m-Bills</string>
    <string name="no_unpaid_bills">There are no unpaid m-Bills</string>
    <string name="message_unavailable">This operation is not available in the current version of the software</string>
    <string name="no_promotions">There are no m-Promotions\n stored in the Wallet.\n Download from the Market</string>
    <string name="no_ads">There are no m-Advertisements\n stored in the Wallet.\n Download from the Market</string>
    <string name="no_bank_accounts">There are no Bank Accounts\n stored in the Wallet.</string>
    <string name="sample_text">Sample Text</string>
    <string name="no_promotions_market">There are no m-Promotions\n on the Market</string>

</resources>