<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffcccccc"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/widget236"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/title"
        android:gravity="center"
        android:padding="10dip"
        android:shadowColor="#ff003333"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1.5"
        android:text="@string/m_bill"
        android:textColor="#ff000066"
        android:textSize="24sp"
        android:textStyle="bold" >
    </TextView>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/prom_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widget236"
        android:layout_margin="10dip"
        android:background="@drawable/rounded_background"
        android:padding="10dip" >

        <TextView
            android:id="@+id/bill_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_no"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff000000" >
        </TextView>

        <TextView
            android:id="@+id/bill_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bill_no"
            android:text="@string/bill_desc"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff000000" >
        </TextView>

        <TextView
            android:id="@+id/bill_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bill_desc"
            android:text="@string/bill_status"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff000000" >
        </TextView>

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bill_status"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff000000" >
        </TextView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/qr"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom_bar"
        android:layout_below="@+id/prom_details"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dip"
        android:contentDescription="@string/todo"
        android:src="@raw/qr" />

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/ok"
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="ok"
            android:text="@string/ok"
            android:textColor="#ff3c0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pay"
            android:layout_width="0dip"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="pay"
            android:text="@string/pay"
            android:textColor="#ff3c0000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>