<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_background" >

    <LinearLayout
        android:id="@+id/widget59"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/widget236"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title"
            android:gravity="center"
            android:padding="10dip"
            android:shadowColor="#ff003333"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.5"
            android:text="@string/m_banking"
            android:textColor="#ff000066"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Reg_Bank_Account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/first_button_bg"
            android:drawableLeft="@drawable/registerbankaccount"
            android:gravity="center|left"
            android:paddingLeft="10dip"
            android:text="@string/register_bank_account"
            android:textColor="#ff3c0000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/check_account_balance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/last_button_bg"
            android:drawableLeft="@drawable/list_bank_accounts"
            android:gravity="fill"
            android:onClick="accountBalance"
            android:paddingLeft="10dip"
            android:text="@string/bank_account_balance"
            android:textColor="#ff3c0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Transfer_Funds"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/transfer_funds"
            android:gravity="fill"
            android:paddingLeft="10dip"
            android:text="@string/transfer_funds"
            android:textColor="#ff3c0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Pay_Bill"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/first_button_bg"
            android:drawableLeft="@drawable/pay_bill_invoice"
            android:gravity="center|left"
            android:paddingLeft="10dip"
            android:text="@string/pay_bill_invoice"
            android:textColor="#ff3c0000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/List_Bank_Accounts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/last_button_bg"
            android:drawableLeft="@drawable/list_delete_bank_accounts"
            android:gravity="fill"
            android:paddingLeft="10dip"
            android:text="@string/list_delete_bank_accounts"
            android:textColor="#ff3c0000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/List_Transactions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/last_button_bg"
            android:drawableLeft="@drawable/list_transactions"
            android:gravity="fill"
            android:paddingLeft="10dip"
            android:text="@string/list_bank_transactions"
            android:textColor="#ff3c0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bank_acc_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/last_button_bg"
            android:drawableLeft="@drawable/list_delete_bank_accounts"
            android:gravity="fill"
            android:paddingLeft="10dip"
            android:text="@string/account_status"
            android:textColor="#ff3c0000"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>