<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout style="@style/TitleBar" android:id="@+id/actionbar">
  		<ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/ic_title_home"
            android:onClick="onActionBarHomeClick" />
            
        <ImageView style="@style/TitleBarSeparator" />
        <TextView android:text="m-Shopping" 
        	android:layout_height="wrap_content" 
        	android:textAppearance="?android:attr/textAppearanceLarge" 
        	android:layout_width="wrap_content" 
        	android:id="@+id/action_bar_title"
        	android:padding="5dp"
        	android:textColor="#FFFFFFFF" />       

        <View style="@style/TitleBarSpring" />

        <ImageView style="@style/TitleBarSeparator" android:id="@+id/sep_2" />        
        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/btn_title_refresh"
            android:contentDescription="@string/description_refresh"
            android:src="@drawable/ic_title_refresh" />
        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_title_map" />
    </LinearLayout>
</merge>