<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget314"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/widget236"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title"
        android:gravity="center"
        android:padding="10dip"
        android:shadowColor="#ff003333"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1.5"
        android:text="@string/account_balance"
        android:textColor="#ff000066"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/safe_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:prompt="@string/select_safe_account" />

    <Button
        android:id="@+id/btn_chk_bal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:onClick="checkBalance"
        android:text="@string/check_balance"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>