<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/widget236"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title"
        android:gravity="center"
        android:padding="10dip"
        android:shadowColor="#ff003333"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1.5"
        android:text="@string/m_pay"
        android:textColor="#ff000066"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Pay_Bill"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/first_button_bg"
        android:drawableLeft="@drawable/pay_bill_invoice"
        android:gravity="center|left"
        android:paddingLeft="10dip"
        android:text="@string/pay_bill_invoice"
        android:textColor="#ff3c0000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Pay_Merchant"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/first_button_bg"
        android:drawableLeft="@drawable/mpay"
        android:gravity="center|left"
        android:paddingLeft="10dip"
        android:text="@string/pay_merchant"
        android:textColor="#ff3c0000"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>